2014-10-08  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (ffsl): Export.
	(ffsll): Export.
	* syscalls.cc (ffs): Implement using GCC intrinsic.
	(ffsl): Ditto.
	(ffsll): Ditto.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2014-10-08  Christian Franke  <franke@computer.org>

	* syscall.cc (ffs): Fix crash of ffs (0x80000000) on 64 bit.

2014-10-08  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (format_process_statm): Fix output of dirty
	pages.  Add linefeed.

2014-09-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (proc_tab): Add entry for cygdrive symlink.
	(format_proc_cygdrive): New function to implement /proc/cygdrive.

2014-09-05  Corinna Vinschen  <corinna@vinschen.de>

	* exception.h (class exception): Remove unnecessary #ifdef.
	* uinfo.cc (client_request_pwdgrp::client_request_pwdgrp): Fix length
	counter to include trailing NUL.

	* sec_auth.cc (get_user_groups): Add experimental exception handler.
	(get_user_local_groups): Ditto.

2014-09-05  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Handle APPLICATION
	PACKAGE AUTHORITY SIDs.
	* winlean.h (DNLEN): Raise to 31.  Explain why.

2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (aclcheck32): Check for required default entries as well.
	Enable check for missing CLASS_OBJ entries, now that setfacl creates
	them.

2014-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (aclsort32): Set errno to EINVAL if aclcheck32 failed.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (pwdgrp::fetch_account_from_windows): Disallow user accounts
	as groups.  Add comment.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_pwdgrp::init): Fix comment.  Rearrange code for
	style.
	(cygheap_pwdgrp::nss_init_line): Disable db_prefix and db_separator
	settings.  Add comment.
	(pwdgrp::fetch_account_from_windows): Drop outdated comment.  Fix code