@@ -1,3 +1,13 @@
+2014-10-09  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_proc.cc (fhandler_proc::readdir): Set dirent d_type.
+	* fhandler_process.cc (fhandler_process::readdir): Ditto.
+	* fhandler_procnet.cc (fhandler_procnet::readdir): Ditto.
+	* fhandler_procsys.cc (fhandler_procsys::readdir): Ditto.
+	* fhandler_procsysvipc.cc (fhandler_procsysvipc::readdir): Ditto.
+	*  fhandler_virtual.h (virt_ftype_to_dtype): Define new inline function
+	to generate dirent d_type from virtual_ftype_t.
+
 2014-10-08  Corinna Vinschen  <corinna@vinschen.de>
 
 	* common.din (ffsl): Export.
